# matrix-federation-inspector

./: Cargo.toml  README.md
src/: lib.rs  main.rs  resolver.rs
