[package]
authors = ["Erik Johnston"]
name = "mxfedtest"
version = "0.1.0"

[dependencies]
chrono = "0.3.0"
clap = "2.1.2"
dns-parser = "0.6.0"
hyper = "0.10.0"
hyper-openssl = "0.2.6"
itertools = "0.6.0"
marksman_escape = "0.1.2"
openssl = "0.9.0"
prettytable-rs = "0.6.1"
quick-error = "1.0.0"
rand = "0.3.14"
resolv-conf = "0.4.0"
rustc-serialize = "0.3.18"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"

[dependencies.toml]
features = ["serde"]
version = "0.4.0"

[replace]
"hyper-openssl:0.2.6" = { git = 'https://github.com/erikjohnston/hyper-openssl' }

